most pages look the same except home

--- a/css/AVtory.css
+++ b/css/AVtory.css
@@ -1,6 +1,10 @@
 /* 
 	Stylesheet for AVtory.html 
+    * Base structure
+
 */
+
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
 
 body{
     font-family: Times New Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
@@ -17,8 +21,23 @@ hr{
     background-color: #000000; 	/* Set fill color of line */
 }
 
+
+h1 {
+  margin-bottom: 20px;
+  padding-bottom: 9px;
+  border-bottom: 1px solid #eee;
+}
+
 /* HEADER */
-.top_container, .bottom_container{
+.top_container{    
+    top: 500px;
+    color: #F8F8FF; /* Ghost White */
+    background-color: #000000;
+    padding: 20px;
+  }
+
+
+.bottom_container{
     color: #F8F8FF; /* Ghost White */
     background-color: #000000;
     padding: 20px;
@@ -34,8 +53,8 @@ hr{
 
 /* MAIN BODY */
 .body_container{
-    width: 80%;  			/* Makes container smaller than body */
-    margin-left: auto;  	/* Centers container within body */
+    width: 80%;  			        /* Makes container smaller than body */
+    margin-left: auto;  	     /* Centers container within body */
     margin-right: auto;
     background-color: #A9A9A9;
 }
@@ -49,4 +68,60 @@ hr{
     text-align: center;
 }
 /* FOOTER */
+
+
+
+/*BOOTSTRAP*/
+
+/*
+ * Sidebar
+ */
+
+.sidebar {
+  position: fixed;
+  top: 51px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  border-right: 1px solid #eee;
+}
+
+/* Sidebar navigation */
+.sidebar {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.sidebar .nav {
+  margin-bottom: 20px;
+}
+
+.sidebar .nav-item {
+  width: 100%;
+}
+
+.sidebar .nav-item + .nav-item {
+  margin-left: 0;
+}
+
+.sidebar .nav-link {
+  border-radius: 0;
+}
+
+/*
+ * Dashboard
+ */
+
+ /* Placeholders */
+.placeholders {
+  padding-bottom: 3rem;
+}
+
+.placeholder img {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 
